--- a/index.HTML
+++ b/index.HTML
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bbokari</title>
+    <title>meus links - dhulya</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: rgb(236, 236, 127);">
-    <h1 style="color: darkgoldenrod;">Felix</h1>
-    <img src="images.jpeg" alt="" style="width: 400px; height: 50;" >
+<body>
+    <div class="container">
+        <header class="perfil">
+            <img src="images.jpeg" alt="felix" class="foto-perfil">
+                <h1>dhulya estadler</h1>
+                <p>sejam bem vindos ao meu primeiro site! abaixo estão meus links principais.</p>
+        </header>
+    </div>
 </body>
-</html>
